--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -18,64 +18,16 @@
 
 }
 
+.w-100 {
+  width: 100%!important;
+  height: 273px !important;
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@import "node_modules/boostrap/scss/bootstrap";
-
+$container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 960px,
+        xl: 1140px,
+        xxl: 1320px
+);
