--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,3 +15,7 @@
     background: linear-gradient(to top, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+.w-100 {
+    width: 100%!important;
+    height: 273px !important;
+}
